tests/ui/errors/snapshots/infer_enum_name_as_pattern_on_interface_scrutinee.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
   ╭─[test.lis:8:5]
 7 │   match e {
 8 │     Color => 0,
   ·     ──┬──
   ·       ╰── not a variant of any enum in scope
 9 │     _ => 1,
   ╰────
  help: Check that the variant is defined in the enum and spelled correctly · code: [resolve.variant_not_found]
