tests/ui/errors/snapshots/infer_enum_spread_mixed_field_slot_mismatch.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Enum spread cannot fill variant-specific fields
    ╭─[test.lis:9:20]
  8 │   let a = E.A { tag: 1, w: 2, keep: "k" }
  9 │   let _b = E.B { ..a }
    ·                    ┬
    ·                    ╰── may hold any `E` variant
 10 │ }
    ╰────
  help: Every `E` variant has `tag` and `w`, but they cannot share one slot across variants, so each variant stores them separately and a spread cannot fill them. Assign fields `tag` and `w` explicitly · code: [infer.enum_spread_missing_fields]
