tests/ui/errors/snapshots/infer_enum_struct_variant_zero_fill_no_zero_for_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Field has no zero value
   ╭─[test.lis:8:31]
 7 │ fn test() {
 8 │   let m = Action.Move { x: 5, .. };
   ·                               ─┬
   ·                                ╰── no zero available
 9 │ }
   ╰────
  help: Field `dst` of type `Channel<int>` has no zero value. Provide an explicit value, or wrap the field type in `Option<T>` · code: [infer.field_no_zero]
