tests/ui/errors/snapshots/infer_enum_type_alias_used_as_value.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Cannot bind an enum type to a variable
   ╭─[main.lis:5:11]
 4 │ fn main() {
 5 │   let c = utils.Color
   ·           ─────┬─────
   ·                ╰── enum types are not runtime values
 6 │ }
   ╰────
  help: Use a type alias instead: `type Alias = utils.Color` · code: [infer.let_binding_enum_type]
