tests/ui/errors/snapshots/infer_enum_type_via_module_alias_used_as_value.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Cannot use a module namespace as a value
   ╭─[main.lis:5:11]
 4 │ fn main() {
 5 │   let u = utils
   ·           ──┬──
   ·             ╰── module namespaces are not runtime values
 6 │ }
   ╰────
  help: Access a member instead, e.g. `utils.Member` · code: [infer.module_namespace_used_as_value]
